--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 layout: default
 ---
 
-<h1>Advanced JavaScript Student Directory</h1>
+<h1><a href="http://documentup.com/advanced-js/syllabus">Advanced JavaScript</a> Student Directory</h1>
+<p>
+  <a href="https://github.com/advanced-js/students">Add yourself!</a>
+</p>
+
 <!-- based on http://git.io/vvroy -->
-<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 <ul>
   {% for user_hash in site.data.spring_2015 %}
   {% assign username = user_hash[0] %}
