--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
       <!-- TODO add loading image -->
       <img class="js-avatar" src=""/>
       <div>
-        {{ user.name }}
+        <span class="js-name"></span>
         {% assign emoji = user.emoji | replace:':','' | replace:'+','--' %}
         <i class="em em-{{ emoji }}"></i>
       </div>
