include an introduction

--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@ layout: default
     <a href="https://github.com/{{ username }}">
       <!-- TODO add loading image -->
       <img class="js-avatar" src=""/>
-      <div>
-        <span class="js-name"></span>
-        {% assign emoji = user.emoji | replace:':','' | replace:'+','--' %}
-        <i class="em em-{{ emoji }}"></i>
-      </div>
-      <div>
-        <span class="github-username">@{{ username }}</span>
+      <div class="info">
+        <div>
+          <span class="github-username">@{{ username }}</span>
+          {% assign emoji = user.emoji | replace:':','' | replace:'+','--' %}
+          <i class="em em-{{ emoji }}"></i>
+        </div>
+        <div>
+          <span class="js-name"></span>
+        </div>
+        <p>
+          {{ user.introduction }}
+        </p>
       </div>
     </a>
   </li>
