attempt to sort students

--- a/index.html
+++ b/index.html
@@ -9,28 +9,29 @@ layout: default
 
 <!-- based on http://git.io/vvroy -->
 <ul>
-  {% for user_hash in site.data.spring_2015 %}
-  {% assign username = user_hash[0] %}
-  {% assign user = user_hash[1] %}
+  {% assign students = site.data.spring_2015 | sort %}
+  {% for user_hash in students %}
+    {% assign username = user_hash[0] %}
+    {% assign user = user_hash[1] %}
 
-  <li class="js-student" data-username="{{username}}">
-    <a href="https://github.com/{{ username }}">
-      <!-- TODO add loading image -->
-      <img class="js-avatar" src=""/>
-      <div class="info">
-        <div>
-          <span class="github-username">@{{ username }}</span>
-          {% assign emoji = user.emoji | replace:':','' | replace:'+','--' %}
-          <i class="em em-{{ emoji }}"></i>
+    <li class="js-student" data-username="{{username}}">
+      <a href="https://github.com/{{ username }}">
+        <!-- TODO add loading image -->
+        <img class="js-avatar" src=""/>
+        <div class="info">
+          <div>
+            <span class="github-username">@{{ username }}</span>
+            {% assign emoji = user.emoji | replace:':','' | replace:'+','--' %}
+            <i class="em em-{{ emoji }}"></i>
+          </div>
+          <div>
+            <span class="js-name"></span>
+          </div>
+          <p>
+            {{ user.introduction }}
+          </p>
         </div>
-        <div>
-          <span class="js-name"></span>
-        </div>
-        <p>
-          {{ user.introduction }}
-        </p>
-      </div>
-    </a>
-  </li>
+      </a>
+    </li>
   {% endfor %}
 </ul>
