--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 
 <!-- based on http://git.io/vvroy -->
 <ul>
-  {% assign students = site.data.spring_2015 | sort %}
+  {% assign students = site.data.fall_2015 | sort %}
   {% for user_hash in students %}
     {% assign username = user_hash[0] %}
     {% assign user = user_hash[1] %}
