--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1><a href="http://documentup.com/advanced-js/syllabus">{{site.class_name}}</h1>
+<h1><a href="http://coltec-daw.github.io/">{{site.class_name}}</h1>
 <p class="class-year">
   <a href="{{site.class_link}}">{{site.class_year}}</a>
 </p>
