Correção do título e adição de footer.

--- a/index.html
+++ b/index.html
@@ -34,4 +34,8 @@ layout: default
       </a>
     </div>
   {% endfor %}
+
+  <footer>
+    <a href="http://github.com/coltec-daw/{{site.class_name}}">Código Fonte</a>
+  </footer>
 </div>
