Correção do scss. Adicionado link para fonte.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1><a href="http://coltec-daw.github.io/">{{site.class_name}}</h1>
 <p class="class-year">
-  <a href="{{site.class_link}}">{{site.class_year}}</a>
+  <a href="{{site.class_link}}">{{site.class_year}}</a> - <a href="https://github.com/COLTEC-DAW/{{site.repository_name}}">Código Fonte</a>
 </p>
 
 <!-- based on http://git.io/vvroy -->
@@ -34,8 +34,4 @@ layout: default
       </a>
     </div>
   {% endfor %}
-<!-- 
-  <footer>
-    <a href="http://github.com/coltec-daw/{{site.class_name}}">Código Fonte</a>
-  </footer> -->
 </div>
